--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,23 @@
     <link rel="icon" href="%PUBLIC_URL%/portfolio.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Peter's Portfolio"
-    />
+    <meta name="description" content="Peter's Portfolio" />
     <title>Portfolio</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-4SB4F1SBSK"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-4SB4F1SBSK");
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
